part2/todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: shared-pvc
      containers:
      - name: todo-app
        image: macrichard/todo-app:4.0
        volumeMounts:
        - name: shared-image
          mountPath: /shared
        ports:
        - containerPort: 5000
