part2/todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 80 # Internal port that is exposed
      targetPort: 5000 # Port flask listens to
